// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuCheckbox matches snapshot checked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp6-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      aria-hidden="true"
      class="bp6-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-tick-circle"
        tabindex="-1"
      >
        <svg
          data-icon="tick-circle"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8m4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 0 0-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0 0 12 5"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
    <div
      class="bp6-text-overflow-ellipsis bp6-fill"
    >
      hello
    </div>
  </a>
</li>
`;

exports[`MenuCheckbox matches snapshot unchecked 1`] = `
<li
  class=""
  role="none"
>
  <a
    class="bp6-menu-item menu-checkbox"
    role="menuitem"
    tabindex="0"
  >
    <span
      aria-hidden="true"
      class="bp6-menu-item-icon"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-circle"
        tabindex="-1"
      >
        <svg
          data-icon="circle"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8m0 14c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
    <div
      class="bp6-text-overflow-ellipsis bp6-fill"
    >
      hello
    </div>
  </a>
</li>
`;
